[package]
name = "http-server"
version = "0.1.0"
authors = ["Mihlali Dlulane"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.97"                                # error handling
bytes = "1.10.1"                                  # helps manage buffers
flate2 = "1.1.0"
log = "0.4.27"
thiserror = "2.0.12"                             # error handling
tokio = "1.44.1"
