[package]
name = "http-server"
version = "0.1.0"
authors = ["Mihlali Dlulane"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.97"                                # error handling
async-trait = "0.1.88"
bytes = "1.10.1"                                  # helps manage buffers
env_logger = "0.11.8"
flate2 = "1.1.0"
futures = "0.3.31"
log = "0.4.27"
thiserror = "2.0.12"                             # error handling
tokio = {version = "1.44.1", features = ["full"]}
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
